--- a/index.html
+++ b/index.html
@@ -20,17 +20,86 @@
             height: 100vh;
             margin: 0;
             padding: 20px;
-            border-radius: 20px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+        }
+
+        .background-animation {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+            background-color: #121212;
+            overflow: hidden;
+        }
+
+        .shape {
+            position: absolute;
+            background: rgba(255, 255, 255, 0.1);
+            animation: float 10s infinite ease-in-out;
+            border-radius: 50%;
+        }
+
+        .shape.triangle {
+            width: 0;
+            height: 0;
+            border-left: 20px solid transparent;
+            border-right: 20px solid transparent;
+            border-bottom: 35px solid rgba(255, 255, 255, 0.1);
+            animation: floatTriangle 12s infinite ease-in-out;
+        }
+
+        .shape.square {
+            width: 30px;
+            height: 30px;
+            animation: floatSquare 14s infinite ease-in-out;
+        }
+
+        @keyframes float {
+            0% {
+                transform: translateY(0);
+            }
+            50% {
+                transform: translateY(-30px);
+            }
+            100% {
+                transform: translateY(0);
+            }
+        }
+
+        @keyframes floatTriangle {
+            0% {
+                transform: translate(0, 0) rotate(0deg);
+            }
+            50% {
+                transform: translate(50px, 50px) rotate(180deg);
+            }
+            100% {
+                transform: translate(0, 0) rotate(360deg);
+            }
+        }
+
+        @keyframes floatSquare {
+            0% {
+                transform: translate(0, 0) rotate(0deg);
+            }
+            50% {
+                transform: translate(-40px, -40px) rotate(180deg);
+            }
+            100% {
+                transform: translate(0, 0) rotate(360deg);
+            }
         }
 
         .container {
             max-width: 600px;
             padding: 20px;
-            background-color: #1f1f1f;
+            background-color: rgba(31, 31, 31, 0.8);
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             border-radius: 15px;
             text-align: center;
+            z-index: 1;
         }
 
         h1 {
@@ -39,7 +108,7 @@
 
         .question-container {
             display: none;
-            transition: opacity 0.5s ease, transform 0.5s ease;
+            transition: opacity 1s ease, transform 1s ease;
             opacity: 0;
             transform: translateY(20px);
         }
@@ -85,7 +154,7 @@
         #explanation-page {
             display: none;
             padding: 20px;
-            background-color: #1f1f1f;
+            background-color: rgba(31, 31, 31, 0.8);
             border-radius: 15px;
             text-align: left;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -94,6 +163,13 @@
 </head>
 
 <body>
+    <div class="background-animation">
+        <div class="shape triangle" style="top: 10%; left: 20%;"></div>
+        <div class="shape square" style="top: 40%; left: 70%;"></div>
+        <div class="shape" style="top: 80%; left: 50%; width: 40px; height: 40px;"></div>
+        <div class="shape triangle" style="top: 30%; left: 90%;"></div>
+        <div class="shape square" style="top: 20%; left: 10%;"></div>
+    </div>
     <div class="container">
         <h1>Тест "Этичный помощник"</h1>
         <p>Пройдите этот тест, чтобы проверить свои знания об этике ИИ.</p>
