--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         const questions = [
             { question: "Должен ли ИИ сообщать пользователям, что он использует их данные?", explanation: "ИИ должен быть прозрачным в своих действиях, включая уведомление о сборе данных." },
             { question: "Допустимо ли ИИ контролировать нашу активность в социальных сетях?", explanation: "Контроль активности может нарушить права на конфиденциальность." },
-            { question: "Как ИИ должен использоваться в обучении школьников?", explanation: "ИИ должен поддерживать образовательные процессы, а не заменять их полностью." },
+            { question: "Должен ли ИИ использоваться в обучении школьников?", explanation: "ИИ должен поддерживать образовательные процессы, а не заменять их полностью." },
             { question: "Считаете ли вы, что ИИ должен анализировать медицинские данные?", explanation: "Анализ медицинских данных может быть полезным, но необходимо согласие пациента." },
             { question: "Должен ли ИИ рекомендовать контент на основе предпочтений пользователя?", explanation: "Такие рекомендации могут создавать информационные пузыри." },
             { question: "Следует ли ИИ соблюдать конфиденциальность данных?", explanation: "Соблюдение конфиденциальности является ключевым этическим требованием." },
